--- a/package.json
+++ b/package.json
@@ -211,8 +211,11 @@
     "test:init:eleventy-deps": "npm ci --prefix tests/integration/eleventy-site --no-audit",
     "test:init:hugo-deps": "npm ci --prefix tests/integration/hugo-site --no-audit",
     "test:dev:ava": "ava --verbose",
+    "test:dev:vitest": "vitest run",
     "test:ci:ava:unit": "c8 -r json ava --no-worker-threads tests/unit/ tools/",
     "test:ci:ava:integration": "c8 -r json ava --concurrency 1 --no-worker-threads tests/integration/",
+    "test:ci:vitest:unit": "vitest run --coverage tests/unit/",
+    "test:ci:vitest:integration": "vitest run --coverage --no-threads tests/integration/",
     "test:affected": "node ./tools/affected-test.mjs",
     "e2e": "node ./tools/e2e/run.mjs",
     "docs": "node ./site/scripts/docs.mjs",
@@ -337,6 +340,7 @@
   "devDependencies": {
     "@babel/preset-react": "^7.12.13",
     "@netlify/eslint-config-node": "^7.0.0",
+    "@vitest/coverage-c8": "^0.25.3",
     "ava": "^4.0.0",
     "c8": "^7.11.0",
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
@@ -352,19 +356,20 @@
     "rewiremock": "^3.14.3",
     "serialize-javascript": "^6.0.0",
     "sinon": "^14.0.0",
-    "sort-on": "^4.1.0",
     "strip-ansi": "^6.0.0",
     "supertest": "^6.1.6",
     "temp-dir": "^2.0.0",
     "tomlify-j0.4": "^3.0.0",
     "tree-kill": "^1.2.2",
     "typescript": "^4.4.4",
-    "verdaccio": "^5.10.2"
+    "verdaccio": "^5.10.2",
+    "vite": "^3.2.4",
+    "vitest": "^0.25.3"
   },
   "ava": {
     "files": [
       "tools/**/*.test.mjs",
-      "tests/**/*.test.+(c|m)js"
+      "tests/**/*.test.cjs"
     ],
     "cache": true,
     "concurrency": 5,
