--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -44,5 +44,10 @@ jobs:
         run: npm run format:ci
         if: '${{!steps.release-check.outputs.IS_RELEASE}}'
       - name: Run unit tests
-        run: npm run test:ci:vitest:unit
+        uses: nick-fields/retry@v2
+        with:
+          timeout_minutes: 15
+          max_attempts: 3
+          retry_on: error
+          command: npm run test:ci:vitest:unit
         if: '${{!steps.release-check.outputs.IS_RELEASE}}'
