--- a/package.json
+++ b/package.json
@@ -319,6 +319,7 @@
     "static-server": "^2.2.1",
     "string-similarity": "^4.0.4",
     "strip-ansi-control-characters": "^2.0.0",
+    "symlink-or-copy": "^1.3.1",
     "tabtab": "^3.0.2",
     "tempy": "^1.0.0",
     "terminal-link": "^2.1.1",
