--- a/package.json
+++ b/package.json
@@ -230,6 +230,7 @@
     "prettier": "--ignore-path .gitignore --loglevel=warn \"{src,tools,scripts,site,tests,.github}/**/*.{mjs,cjs,js,md,yml,json,html}\" \"*.{mjs,cjs,js,yml,json,html}\" \".*.{mjs,cjs,js,yml,json,html}\" \"!CHANGELOG.md\" \"!npm-shrinkwrap.json\" \"!**/*/package-lock.json\" \"!.github/**/*.md\""
   },
   "dependencies": {
+    "@fastify/static": "^6.6.0",
     "@netlify/build": "^29.4.0",
     "@netlify/config": "^20.3.0",
     "@netlify/edge-bundler": "^8.0.0",
@@ -265,6 +266,7 @@
     "execa": "^5.0.0",
     "express": "^4.17.1",
     "express-logging": "^1.1.1",
+    "fastify": "^4.10.2",
     "find-up": "^5.0.0",
     "flush-write-stream": "^2.0.0",
     "folder-walker": "^3.2.0",
@@ -316,7 +318,6 @@
     "read-pkg-up": "^7.0.1",
     "semver": "^7.3.5",
     "source-map-support": "^0.5.19",
-    "static-server": "^2.2.1",
     "string-similarity": "^4.0.4",
     "strip-ansi-control-characters": "^2.0.0",
     "tabtab": "^3.0.2",
