--- a/package.json
+++ b/package.json
@@ -265,6 +265,7 @@
     "execa": "^5.0.0",
     "express": "^4.17.1",
     "express-logging": "^1.1.1",
+    "extract-zip": "^2.0.1",
     "find-up": "^5.0.0",
     "flush-write-stream": "^2.0.0",
     "folder-walker": "^3.2.0",
@@ -319,7 +320,6 @@
     "static-server": "^2.2.1",
     "string-similarity": "^4.0.4",
     "strip-ansi-control-characters": "^2.0.0",
-    "symlink-or-copy": "^1.3.1",
     "tabtab": "^3.0.2",
     "tempy": "^1.0.0",
     "terminal-link": "^2.1.1",
