--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "execa": "^5.0.0",
     "express": "^4.17.1",
     "express-logging": "^1.1.1",
+    "extract-zip": "^2.0.1",
     "fastify": "^4.10.2",
     "find-up": "^5.0.0",
     "flush-write-stream": "^2.0.0",
