Revert "fix: publish shrinkwrap with prod dependencies only (#5359)"
This reverts commit 65f77d95f8f3bb345b4f2984791a036a2d780072.

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -15,8 +15,10 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: lts/*
-          cache: npm
+          node-version: '*'
+          cache: 'npm'
+          cache-dependency-path: 'npm-shrinkwrap.json'
+          check-latest: true
       - name: Install dependencies
         run: npm ci --no-audit && npm prune --production
       - name: Get size
