--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -11,8 +11,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: lts/*
-          cache: npm
+          node-version: '*'
+          cache: 'npm'
+          check-latest: true
+          cache-dependency-path: 'npm-shrinkwrap.json'
           registry-url: 'https://registry.npmjs.org'
       - name: Install core dependencies
         run: npm ci --no-audit
