--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
     "@vitest/coverage-c8": "^0.28.0",
     "ava": "^4.0.0",
     "c8": "^7.11.0",
+    "cpy": "^9.0.1",
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "fast-glob": "^3.2.7",
     "form-data": "^4.0.0",
