--- a/package.json
+++ b/package.json
@@ -186,7 +186,8 @@
     "@babel/preset-react": "^7.12.13",
     "@netlify/eslint-config-node": "^7.0.0",
     "@types/fs-extra": "^11.0.1",
-    "@vitest/coverage-c8": "^0.30.0",
+    "@types/prettyjson": "^0.0.30",
+    "@vitest/coverage-c8": "^0.30.1",
     "ava": "^4.0.0",
     "c8": "^7.11.0",
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
@@ -207,9 +208,9 @@
     "temp-dir": "^2.0.0",
     "tomlify-j0.4": "^3.0.0",
     "tree-kill": "^1.2.2",
-    "typescript": "^4.4.4",
-    "verdaccio": "^5.22.1",
-    "vitest": "^0.30.0"
+    "typescript": "^5.0.4",
+    "verdaccio": "^5.23.2",
+    "vitest": "^0.30.1"
   },
   "ava": {
     "files": [
