chore: try running tests with parallelism

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -15,13 +15,13 @@ jobs:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
         node-version: ['14.18.0', '*']
-        shard: ['1/2', '2/2']
+        shard: ['1/3', '2/3', '3/3']
 
         exclude:
           - os: macOS-latest
-            node-version: '14.x'
+            node-version: '14.18.0'
           - os: windows-latest
-            node-version: '14.x'
+            node-version: '14.18.0'
       fail-fast: false
     steps:
       # Sets an output parameter if this is a release PR
