--- a/.github/workflows/legacy-tests.yml
+++ b/.github/workflows/legacy-tests.yml
@@ -19,9 +19,9 @@ jobs:
 
         exclude:
           - os: macOS-latest
-            node-version: '14.x'
+            node-version: '14.18.0'
           - os: windows-latest
-            node-version: '14.x'
+            node-version: '14.18.0'
       fail-fast: false
     steps:
       # Sets an output parameter if this is a release PR
