--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "through2-map": "^3.0.0",
     "to-readable-stream": "^2.1.0",
     "toml": "^3.0.0",
+    "ulid": "^2.3.0",
     "unixify": "^1.0.0",
     "update-notifier": "^6.0.0",
     "uuid": "^9.0.0",
