--- a/netlify.toml
+++ b/netlify.toml
@@ -5,8 +5,9 @@
   publish = "site/dist"
 
   [build.environment]
-    NODE_VERSION = "18"
-    AWS_LAMBDA_JS_RUNTIME = "nodejs18.x"
+    # cannot use node 18, as we use x0 which uses webpack 4
+    NODE_VERSION = "16"
+    AWS_LAMBDA_JS_RUNTIME = "nodejs16.x"
 
 [functions]
   # Sets a custom directory for Netlify Functions
