--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        node-version: [14.x, '*']
+        node-version: ['14.18.0', '*']
         shard: ['1/2', '2/2']
 
         exclude:
