--- a/.github/workflows/legacy-tests.yml
+++ b/.github/workflows/legacy-tests.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        node-version: [14.x, '*']
+        node-version: ['14.18.0', '*']
         machine: ['0', '1', '2', '3', '4', '5', '6']
 
         exclude:
