--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        node-version: ['*']
+        node-version: ['14.18.0', '*']
     steps:
       # Sets an output parameter if this is a release PR
       - name: Check for release
