--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Netlify Inc.",
   "type": "module",
   "engines": {
-    "node": "^14.16.0 || >=16.0.0"
+    "node": "^14.18.0 || >=16.0.0"
   },
   "files": [
     "/bin",
@@ -54,7 +54,7 @@
     "test:init:cli-version": "npm run start -- --version",
     "test:init:cli-help": "npm run start -- --help",
     "test:init:eleventy-deps": "npm ci --prefix tests/integration/eleventy-site --no-audit",
-    "test:init:hugo-deps": "npm ci --prefix tests/integration/hugo-site --no-audit",
+    "test:init:hugo-deps": "npm ci --prefix tests/integration/__fixtures__/hugo-site --no-audit",
     "test:dev:ava": "ava --verbose",
     "test:dev:vitest": "vitest run tests/unit/ && vitest run tests/integration",
     "test:ci:ava:integration": "c8 -r json ava --concurrency 1 --no-worker-threads tests/integration/",
@@ -185,13 +185,14 @@
   "devDependencies": {
     "@babel/preset-react": "^7.12.13",
     "@netlify/eslint-config-node": "^7.0.0",
+    "@types/fs-extra": "^11.0.1",
     "@vitest/coverage-c8": "^0.30.0",
     "ava": "^4.0.0",
     "c8": "^7.11.0",
-    "cpy": "^9.0.1",
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "fast-glob": "^3.2.7",
     "form-data": "^4.0.0",
+    "fs-extra": "^11.1.1",
     "got": "^11.8.6",
     "graphviz": "^0.0.9",
     "husky": "^8.0.0",
