--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "test:init": "run-s test:init:*",
     "test:init:cli-version": "npm run start -- --version",
     "test:init:cli-help": "npm run start -- --help",
-    "test:init:eleventy-deps": "npm ci --prefix tests/integration/eleventy-site --no-audit",
-    "test:init:hugo-deps": "npm ci --prefix tests/integration/__fixtures__/hugo-site --no-audit",
+    "test:init:eleventy-deps": "npm ci --prefix tests/integration/eleventy-site --no-audit --foreground-scripts",
+    "test:init:hugo-deps": "npm ci --prefix tests/integration/__fixtures__/hugo-site --no-audit --foreground-scripts",
     "test:dev:ava": "ava --verbose",
     "test:dev:vitest": "vitest run tests/unit/ && vitest run tests/integration",
     "test:ci:ava:integration": "c8 -r json ava --concurrency 1 --no-worker-threads tests/integration/",
@@ -65,7 +65,7 @@
     "docs": "node ./site/scripts/docs.mjs",
     "watch": "c8 --reporter=lcov ava --watch",
     "site:build": "run-s site:build:*",
-    "site:build:install": "cd site && npm ci --no-audit",
+    "site:build:install": "cd site && npm ci --no-audit --foreground-scripts",
     "site:build:assets": "cd site && npm run build",
     "postinstall": "node ./scripts/postinstall.mjs",
     "prepublishOnly": "node ./scripts/prepare-for-publish.mjs",
