--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: lts/*
           cache: npm
       - name: Install dependencies
-        run: npm ci --no-audit && npm prune --production
+        run: npm ci --no-audit --foreground-scripts && npm prune --production
       - name: Get size
         run: du -sk node_modules | cut -f1 > .delta.packageSize && echo "kb (Package size)" >> .delta.packageSize
       - name: Save PR number
