--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -39,7 +39,7 @@ jobs:
           path: ./.verdaccio-storage
           key: verdaccio-e2e-cli-${{ hashFiles('./package-lock.json') }}
       - name: Install dependencies
-        run: npm ci --no-audit
+        run: npm ci --no-audit --foreground-scripts
       - name: Install pnpm
         run: npm install -g pnpm
       - run: npm run e2e
