--- a/.github/workflows/verify-docs.yml
+++ b/.github/workflows/verify-docs.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: lts/*
           cache: npm
       - name: Install core dependencies
-        run: npm ci --no-audit
+        run: npm ci --no-audit --foreground-scripts
       - name: Install site dependencies
         run: npm run site:build:install
       - name: Generate docs
