--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -17,6 +17,8 @@ jobs:
           node-version: lts/*
           cache: npm
           registry-url: 'https://registry.npmjs.org'
+      - name: Downgrade npm
+        run: npm install -g npm@9.4.0
       - name: Install core dependencies
         run: npm ci --no-audit
       - name: Extract tag and version
