--- a/.github/workflows/verify-docs.yml
+++ b/.github/workflows/verify-docs.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           node-version: lts/*
           cache: npm
+      - name: Downgrade npm
+        run: npm install -g npm@9.4.0
       - name: Install core dependencies
         run: npm ci --no-audit
       - name: Install site dependencies
