--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,8 +1,8 @@
-.github/CODEOWNERS        @netlify/netlify-dev
-docs/                     @netlify/netlify-dev @netlify/docs
-site/                     @netlify/netlify-dev @netlify/docs
-/scripts/docs.js          @netlify/netlify-dev @netlify/docs
-/src/functions-templates/ @netlify/runtime-pod-compute 
-/src/lib/functions/       @netlify/runtime-pod-compute 
-/src/lib/edge-functions/  @netlify/runtime-pod-compute 
-/src/utils/functions/     @netlify/runtime-pod-compute 
+.github/CODEOWNERS  @netlify/netlify-dev
+docs/  @netlify/netlify-dev  @netlify/department-docs
+site/  @netlify/netlify-dev  @netlify/department-docs
+/scripts/docs.js  @netlify/netlify-dev  @netlify/department-docs
+/src/functions-templates/ @netlify/ecosystem-pod-developer-foundations @netlify/runtime-pod-compute
+/src/lib/functions/ @netlify/ecosystem-pod-developer-foundations @netlify/runtime-pod-compute
+/src/lib/edge-functions/ @netlify/ecosystem-pod-developer-foundations @netlify/runtime-pod-compute
+/src/utils/functions/ @netlify/ecosystem-pod-developer-foundations @netlify/runtime-pod-compute
