--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 *                @netlify/ecosystem-pod-developer-foundations
-docs/            @netlify/department-docs
-site/            @netlify/department-docs
-/scripts/docs.js @netlify/department-docs
+docs/            @netlify/ecosystem-pod-developer-foundations @netlify/department-docs
+site/            @netlify/ecosystem-pod-developer-foundations @netlify/department-docs
+/scripts/docs.js @netlify/ecosystem-pod-developer-foundations @netlify/department-docs
