--- a/renovate.json
+++ b/renovate.json
@@ -24,8 +24,16 @@
       "matchPaths": ["src/**/package.json"],
       "semanticCommitType": "fix",
       "addLabels": ["templates"],
-      "semanticCommitScope": "template",
+      "semanticCommitScope": "templates",
       "additionalBranchPrefix": "templates-"
+    },
+    {
+      "matchPaths": ["tests/**/package.json"],
+      "extends": [":pinAllExceptPeerDependencies"]
+    },
+    {
+      "matchFiles": ["package.json", "site/package.json"],
+      "extends": [":pinAllExceptPeerDependencies"]
     }
   ]
 }
