feat: add support for streaming functions

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@netlify/local-functions-proxy": "1.1.1",
     "@netlify/zip-it-and-ship-it": "9.5.0",
     "@octokit/rest": "19.0.8",
+    "@skn0tt/lambda-local": "^2.0.3",
     "ansi-escapes": "6.2.0",
     "ansi-styles": "6.2.1",
     "ansi-to-html": "0.7.2",
@@ -134,11 +135,11 @@
     "inquirer": "6.5.2",
     "inquirer-autocomplete-prompt": "1.4.0",
     "is-docker": "3.0.0",
+    "is-stream": "^3.0.0",
     "is-wsl": "2.2.0",
     "isexe": "2.0.0",
     "jsonwebtoken": "9.0.0",
     "jwt-decode": "3.1.2",
-    "lambda-local": "2.0.3",
     "listr": "0.14.3",
     "locate-path": "7.2.0",
     "lodash": "4.17.21",
