--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -21,6 +21,10 @@ jobs:
         run: npm ci --no-audit && npm prune --production
       - name: Get size
         run: du -sk node_modules | cut -f1 > .delta.packageSize && echo "kb (Package size)" >> .delta.packageSize
+      - name: Get dependency count
+        run:
+          npm ls -a -p | wc -l | tr -d ' \n' > .delta.dependencyCount && echo " (Dependency count)" >>
+          .delta.dependencyCount
       - name: Save PR number
         if: github.event_name == 'pull_request'
         run: echo ${{ github.event.number }} > ./pr_number
