--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,13 +1,13 @@
-name: Calculate package size
+name: Calculate benchmarks
 
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
-
 jobs:
   package-size:
+    if: startsWith(github.head_ref, 'release-please') == false
     runs-on: ubuntu-latest
     steps:
       - name: Git checkout
