--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "express": "4.18.2",
     "express-logging": "1.1.1",
     "extract-zip": "2.0.1",
+    "fastest-levenshtein": "1.0.16",
     "fastify": "4.17.0",
     "find-up": "6.3.0",
     "flush-write-stream": "2.0.0",
@@ -167,7 +168,6 @@
     "read-pkg-up": "9.1.0",
     "semver": "7.5.1",
     "source-map-support": "0.5.21",
-    "string-similarity": "4.0.4",
     "strip-ansi-control-characters": "2.0.0",
     "tabtab": "3.0.2",
     "tempy": "3.0.0",
