--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
     "@netlify/functions": "1.6.0",
     "@types/fs-extra": "11.0.1",
     "@types/prettyjson": "0.0.30",
+    "@types/semver": "7.5.0",
     "@vitest/coverage-c8": "0.31.4",
     "ava": "4.3.3",
     "c8": "7.14.0",
