--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-*                @netlify/ecosystem-pod-developer-foundations
+.github/CODEOWNERS                @netlify/ecosystem-pod-developer-foundations
 docs/            @netlify/ecosystem-pod-developer-foundations @netlify/department-docs
 site/            @netlify/ecosystem-pod-developer-foundations @netlify/department-docs
