--- a/package.json
+++ b/package.json
@@ -192,7 +192,7 @@
     "@types/fs-extra": "11.0.1",
     "@types/prettyjson": "0.0.30",
     "@types/semver": "7.5.0",
-    "@vitest/coverage-c8": "0.33.0",
+    "@vitest/coverage-v8": "0.33.0",
     "ava": "4.3.3",
     "c8": "7.14.0",
     "eslint-plugin-sort-destructure-keys": "1.5.0",
