--- a/package.json
+++ b/package.json
@@ -87,7 +87,6 @@
     "@netlify/serverless-functions-api": "1.5.2",
     "@netlify/zip-it-and-ship-it": "9.13.1",
     "@octokit/rest": "19.0.13",
-    "@skn0tt/lambda-local": "2.0.3",
     "ansi-escapes": "6.2.0",
     "ansi-styles": "6.2.1",
     "ansi-to-html": "0.7.2",
@@ -142,6 +141,7 @@
     "isexe": "2.0.0",
     "jsonwebtoken": "9.0.1",
     "jwt-decode": "3.1.2",
+    "lambda-local": "2.1.1",
     "listr": "0.14.3",
     "locate-path": "7.2.0",
     "lodash": "4.17.21",
