feat: Replace framework-info with build-info (#5816)
* feat!: support monorepo development

BREAKING CHANGE: In monorepos it is now prompting you
to select the site you want to run the operations in.

This can be bypassed by providing a `--filter` argument
and specify a site/workspace package that should be used.

Through that config file paths are changed and toml files
are picked up accordingly out of the package folders.

* chore: fix build and dev command execution

* chore: update

* chore: adapt types

* chore: updates + remove nod 14 support

* chore: fix linting

* chore: fix

* chore: fix lining

* chore: updates

* chore: fix 11ty tests

* chore: restore snapshot

* chore: fix init test

* chore: update

* Apply suggestions from code review

Co-authored-by: Eduardo Bouças <mail@eduardoboucas.com>

* Update src/commands/base-command.mjs

Co-authored-by: Eduardo Bouças <mail@eduardoboucas.com>

* Update src/commands/base-command.mjs

Co-authored-by: Eduardo Bouças <mail@eduardoboucas.com>

* Update src/commands/base-command.mjs

Co-authored-by: Eduardo Bouças <mail@eduardoboucas.com>

* fix: fix unescaped backtick

* chore: fix the todo and other suggestions

* chore: skip as they are blocking the CI and passing locally

* chore: fix test

* chore: remove `.only`

* chore: test updates and smol fixes

* chore: remove unknown test

* chore: famous last commit

* chore: uncomment skip

---------

Co-authored-by: Lukas Holzer <lukas.holzer@netlify.com>
Co-authored-by: Eduardo Bouças <mail@eduardoboucas.com>

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Netlify Inc.",
   "type": "module",
   "engines": {
-    "node": "^14.18.0 || >=16.0.0"
+    "node": ">=16.16.0"
   },
   "files": [
     "/bin",
@@ -78,11 +78,10 @@
   "dependencies": {
     "@bugsnag/js": "7.20.2",
     "@fastify/static": "6.10.2",
-    "@netlify/build": "29.17.3",
+    "@netlify/build": "29.19.0",
     "@netlify/build-info": "7.7.3",
-    "@netlify/config": "20.6.4",
+    "@netlify/config": "20.8.0",
     "@netlify/edge-bundler": "8.17.1",
-    "@netlify/framework-info": "9.8.10",
     "@netlify/local-functions-proxy": "1.1.1",
     "@netlify/serverless-functions-api": "1.5.2",
     "@netlify/zip-it-and-ship-it": "9.13.1",
@@ -186,6 +185,7 @@
     "write-file-atomic": "5.0.1"
   },
   "devDependencies": {
+    "eslint-plugin-workspace": "file:./tools/lint-rules",
     "@babel/preset-react": "7.22.5",
     "@netlify/eslint-config-node": "7.0.0",
     "@netlify/functions": "1.6.0",
