Update slug automatically if it differs from jigsaw since it's the source of truth.

--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "@netlify/config": "20.8.0",
     "@netlify/edge-bundler": "8.17.1",
     "@netlify/local-functions-proxy": "1.1.1",
-    "@netlify/sdk": "^0.6.8",
+    "@netlify/sdk": "^0.7.5",
     "@netlify/serverless-functions-api": "1.5.2",
     "@netlify/zip-it-and-ship-it": "9.15.1",
     "@octokit/rest": "19.0.13",
@@ -139,6 +139,7 @@
     "is-stream": "3.0.0",
     "is-wsl": "2.2.0",
     "isexe": "2.0.0",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "9.0.1",
     "jwt-decode": "3.1.2",
     "lambda-local": "2.1.1",
